--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,7 @@ jobs:
           nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Install Nix Linting and Formatting Tools
-        run: nix-env -i statix nixpkgs-fmt -f '<nixpkgs>'
+        run: nix-env -i statix alejandra -f '<nixpkgs>'
 
       - name: Flake update
         run: nix flake update
